--- a/legv8_webui/site/index.html
+++ b/legv8_webui/site/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Legv8 Assembler</title>
+        <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     </head>
     <body>
