Parse negative intermediates
(and some style changes)

--- a/legv8_webui/site/index.html
+++ b/legv8_webui/site/index.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     </head>
     <body>
+        <h1>
+            Legv8 Assembler
+        </h1>
+
+        <p>
+            Assemble Legv8 assembly into a verilog rom module
+        </p>
         <div id="input_div">
         </div>
 
@@ -13,7 +20,7 @@
         </div>
 
         <script src="codemirror/lib/codemirror.js"></script>
-        <script src="codemirror/mode/javascript/javascript.js"></script>
+        <script src="codemirror/mode/verilog/verilog.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
